docker compose setting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
   react-app:
     build:
       context: .
-      Dockerfile: Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "80:80"
 
